# pkg/handlers/exampleHandler.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"encoding/json"
+	"errors"
 	"net/http"
 
 	"github.com/go-chi/chi"
@@ -8,6 +10,7 @@ import (
 
 	"github.com/gesundheitscloud/go-svc-template/pkg/models"
 	"github.com/gesundheitscloud/go-svc/pkg/instrumented"
+	"github.com/gesundheitscloud/go-svc/pkg/logging"
 )
 
 // Define Error messages
@@ -35,7 +38,7 @@ func (eh *ExampleHandler) PublicRoutes() *chi.Mux {
 // Routes returns the routes for the ExampleHandler
 func (eh *ExampleHandler) InternalRoutes() *chi.Mux {
 	router := chi.NewRouter()
-	router.Get(eh.InstrumentChi("/{attribute}", eh.GetExampleByAttribute))
+	router.Post(eh.InstrumentChi("/", eh.UpsertExample))
 	return router
 }
 
@@ -50,7 +53,31 @@ func (eh *ExampleHandler) GetExampleByAttribute(w http.ResponseWriter, r *http.R
 	attribute := chi.URLParam(r, "attribute")
 	example, err := models.GetExampleByAttribute(attribute)
 	if err != nil {
-		WriteHTTPErrorCode(w, err, http.StatusNotFound)
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
 	}
 	render.JSON(w, r, example)
+}
+
+func (eh *ExampleHandler) UpsertExample(w http.ResponseWriter, r *http.Request) {
+	example := models.Example{}
+	err := json.NewDecoder(r.Body).Decode(&example)
+	if err != nil {
+		logging.LogErrorfCtx(r.Context(), err, "Error decoding request payload")
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	err = example.Upsert()
+	if err != nil {
+		switch {
+		case errors.Is(err, models.ErrExampleDuplicateAttribute):
+			http.Error(w, err.Error(), http.StatusConflict)
+		default:
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	w.WriteHeader(http.StatusNoContent)
 }
